feat(clinical): publish attachments by encounter
